# rust-in-cloud-run

./: README.md
.github/workflows/: rust.yml
tiny-runner/: Cargo.toml  Dockerfile  cargo-install-build.sh  docker-build-all.sh  docker-build-arm64.sh  docker-build-x86.sh  docker-build.sh  docker-run.sh
tiny-runner/src/: main.rs
