[package]
name = "tiny-runner"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-ratelimit = "0.3"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"

[dev-dependencies]
actix-rt = "2"

[[bin]]
name = "runner"
path = "src/main.rs"
test = true
bench = false
